--- a/posts.html
+++ b/posts.html
@@ -16,14 +16,9 @@
     --></nav>
 </div>
 <div id="content">
-    <h1>Blog posts:</h1>
-            <a href='./posts/20200511-new-blog.html'>
-            <span class='date'>
-                2020-05-11            </span>
-            <span class='title'>
-                new blog            </span>
-        </a>
-        </div>
+<h1>Blog posts:</h1>
+    <p class='empty'>There are no posts right now.</p>
+    </div>
 <footer>
     &copy;
     (2019-2020)    Daryl Anthony Chouinard
